--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -17,11 +17,15 @@ _cobiclust_ is especially developed for microbiome data whereas _biclust_ is mor
 general method. In this section, we show three different cases and example 
 solutions to apply biclustering to them. 
 
+1.   Taxa vs samples
+2.   Taxa vs biomolecule/biomarker...
+3.   Taxa vs taxa
+
 Biclusters can be visualized using hetamap or boxplot, for instance. 
 Check more ideas for heatmaps from 
 [here](https://microbiome.github.io/OMA/microbiome-community.html#composition-heatmap).
 
-## Taxa vs. samples
+## Taxa vs samples
 
 When you have microbial abundance matrices, we suggest to use _cobiclust_ which is
 designed for microbial data. 
