--- a/24_biclustering.Rmd
+++ b/24_biclustering.Rmd
@@ -90,6 +90,8 @@ Next we can plot clusters. Commonly used plot is heatmap with annotations.
 ```{r cobiclust_3}
 # clr-transform
 tse <- transformSamples(tse, method = "clr", pseudocount = 1)
+# z-transgorm for heatmap
+tse <- transformFeatures(tse, abund_values = "clr", method = "z", name = "clr_z")
 
 # Creates annotations. Levels should be same if column names are the same. 
 # Here samples include 3 clusters, and taxa 2. That is why we have to make 
@@ -101,7 +103,7 @@ annotation_row <- data.frame(rowData(tse)[, "clusters", drop = F])
 colnames(annotation_row) <- "row_clusters"
 
 # Create a heatmap
-pheatmap(assay(tse, "clr"), cluster_rows = F, cluster_cols = F, 
+pheatmap(assay(tse, "clr_z"), cluster_rows = F, cluster_cols = F, 
          annotation_col = annotation_col,
          annotation_row = annotation_row)
 
@@ -156,14 +158,15 @@ Then cross-correlation matrix is calculated.
 ```{r biclust_2}
 # Subser data
 mae[[1]] <- subsetByPrevalentTaxa(mae[[1]], rank = "Genus", prevalence = 0.2, detection = 0.001)
-# clr-transform
+# clr-transforma
 mae[[1]] <- transformSamples(mae[[1]], method = "clr", pseudocount = 1)
 
 ############################ REMOVE THIS WHEN BUG IN GETEXPERIMENTCROSSCORR IS FIXED
 rownames(mae[[1]]) <- make.unique(rownames(mae[[1]]))
 
 # Calculate correlations
-corr <- getExperimentCrossCorrelation(mae, 1, 3, abund_values1 = "clr", abund_values2 = "signals", mode = "matrix")
+corr <- getExperimentCrossCorrelation(mae, 1, 3, abund_values1 = "clr", abund_values2 = "signals", mode = "matrix", 
+                                      cor_threshold = 0.2)
 head(corr)
 ```
 
@@ -193,72 +196,94 @@ additional cluster for features/samples that are not assigned into any cluster.
 
 ```{r biclust_4}
 # Get cluster info for features and convert it into data frame
-bicluster_features <- bc@RowxNumber
-bicluster_features <- data.frame(bicluster_features)
+bicluster_rows <- bc@RowxNumber
+bicluster_rows <- data.frame(bicluster_rows)
 
 # If no clusters were found, create one. Otherwise create additional cluster which
 # contain those features that are not included in clusters that were found.
-if( nrow(bicluster_features) != nrow(corr) ){
-    bicluster_features <- data.frame(cluster = rep(TRUE, nrow(corr)))
+if( nrow(bicluster_rows) != nrow(corr) ){
+    bicluster_rows <- data.frame(cluster = rep(TRUE, nrow(corr)))
 } else {
   # Create additional cluster that includes those features that
   # are not included in other clusters.
-  vec <- ifelse(rowSums(bicluster_features) > 0, FALSE, TRUE)
+  vec <- ifelse(rowSums(bicluster_rows) > 0, FALSE, TRUE)
   # If additional cluster contains features, then add it
   if ( any(vec) ){
-    bicluster_features <- cbind(bicluster_features, vec)
+    bicluster_rows <- cbind(bicluster_rows, vec)
   }
 }
 
 # Give row and column names
-rownames(bicluster_features) <- rownames(corr)
-colnames(bicluster_features) <- paste0("cluster_", 1:ncol(bicluster_features))
+rownames(bicluster_rows) <- rownames(corr)
+colnames(bicluster_rows) <- paste0("cluster_", 1:ncol(bicluster_rows))
 
-head(bicluster_features)
+head(bicluster_rows)
 ```
 
 ```{r biclust_5}
-# Get cluster information for samples
-bicluster_samples <- t(bc@NumberxCol)
-bicluster_samples <- data.frame(bicluster_samples)
+# Get cluster information for columns
+bicluster_columns <- t(bc@NumberxCol)
+bicluster_columns <- data.frame(bicluster_columns)
 
 # If no clusters were found, create one. Otherwise create additional cluster which
 # contain those samples that are not included in clusters that were found.
-if( nrow(bicluster_samples) != ncol(corr) ){
-    bicluster_samples <- data.frame(cluster = rep(TRUE, ncol(corr)))
+if( nrow(bicluster_columns) != ncol(corr) ){
+    bicluster_columns <- data.frame(cluster = rep(TRUE, ncol(corr)))
 } else {
   # Create additional cluster that includes those samples that
   # are not included in other clusters.
-  vec <- ifelse(rowSums(bicluster_samples) > 0, FALSE, TRUE)
+  vec <- ifelse(rowSums(bicluster_columns) > 0, FALSE, TRUE)
   # If additional cluster contains samples, then add it
   if ( any(vec) ){
-    bicluster_samples <- cbind(bicluster_samples, vec)
+    bicluster_columns <- cbind(bicluster_columns, vec)
   }
 
 }
 
 # Give row and column names
-rownames(bicluster_samples) <- colnames(corr)
-colnames(bicluster_samples) <- paste0("cluster_", 1:ncol(bicluster_samples))
+rownames(bicluster_columns) <- colnames(corr)
+colnames(bicluster_columns) <- paste0("cluster_", 1:ncol(bicluster_columns))
 
-head(bicluster_samples)
+head(bicluster_columns)
 ```
+
+JATKA TÄSTÄ
+```{r}
+.get_mean_and_var <- function(tse, abund_values = "counts", clusters){
+    df <- data.frame(lapply(clusters, function(x){
+        tse_subset <- tse[x, ]
+        assay <- assay(tse_subset, abund_values)
+        mean <- mean(rowMeans2(assay, na.rm = T))
+        var <- mean(rowVars(assay, na.rm = T))
+        return(c(mean, var))
+    }))
+    rownames(df) <- c("mean", "variance")
+    
+    return(t(df))
+}
+
+
+.get_mean_and_var(mae[[1]], "clr", bicluster_features)
+.get_mean_and_var(mae[[3]], "signals", bicluster_samples)
+```
+
 
 _pheatmap_ do not allow boolean values, so they must be converted into factors.
 
 ```{r biclust_6}
-bicluster_samples <- data.frame(apply(bicluster_samples, 2, as.factor))
-bicluster_features <- data.frame(apply(bicluster_features, 2, as.factor))
+# bicluster_columns <- data.frame(apply(bicluster_columns, 2, as.factor))
+# bicluster_rows <- data.frame(apply(bicluster_rows, 2, as.factor))
 ```
+
 
 Again, we can plot clusters with heatmap.
 
 ```{r biclust_7, fig.width=10, fig.height=8}
 # Adjust colors for all clusters
-if( ncol(bicluster_features) > ncol(bicluster_samples) ){
-  cluster_names <- colnames(bicluster_features)
+if( ncol(bicluster_rows) > ncol(bicluster_columns) ){
+  cluster_names <- colnames(bicluster_rows)
 } else {
-  cluster_names <- colnames(bicluster_samples)
+  cluster_names <- colnames(bicluster_columns)
 }
 annotation_colors <- list()
 for(name in cluster_names){
@@ -267,8 +292,8 @@ for(name in cluster_names){
 
 # Create a heatmap
 pheatmap(corr, cluster_cols = F, cluster_rows = F,
-         annotation_col = bicluster_samples, 
-         annotation_row = bicluster_features,
+         annotation_col = bicluster_columns, 
+         annotation_row = bicluster_rows,
          annotation_colors = annotation_colors)
 ```
 
@@ -279,7 +304,10 @@ between taxa. _biclust_ is suitable for this.
 
 ```{r biclust_8}
 # Calculate cross-correlation
-corr <- getExperimentCrossCorrelation(mae, 1, 1, abund_values1 = "clr", abund_values2 = "clr", mode = "matrix")
+corr <- getExperimentCrossCorrelation(mae, 1, 1, 
+                                      abund_values1 = "clr", abund_values2 = "clr", 
+                                      mode = "matrix",
+                                      cor_threshold = 0.2)
 
 # Find biclusters
 bc <- biclust(corr, method=BCPlaid(), fit.model = y ~ m,
@@ -290,68 +318,68 @@ bc
 
 ```{r biclust_9}
 # Get cluster info for features and convert it into data frame
-bicluster_features <- bc@RowxNumber
-bicluster_features <- data.frame(bicluster_features)
+bicluster_rows <- bc@RowxNumber
+bicluster_rows <- data.frame(bicluster_rows)
 
 # If no clusters were found, create one. Otherwise create additional cluster which
 # contain those features that are not included in clusters that were found.
-if( nrow(bicluster_features) != nrow(corr) ){
-    bicluster_features <- data.frame(cluster = rep(TRUE, nrow(corr)))
+if( nrow(bicluster_rows) != nrow(corr) ){
+    bicluster_rows <- data.frame(cluster = rep(TRUE, nrow(corr)))
 } else {
   # Create additional cluster that includes those features that
   # are not included in other clusters.
-  vec <- ifelse(rowSums(bicluster_features) > 0, FALSE, TRUE)
+  vec <- ifelse(rowSums(bicluster_rows) > 0, FALSE, TRUE)
   # If additional cluster contains features, then add it
   if ( any(vec) ){
-    bicluster_features <- cbind(bicluster_features, vec)
+    bicluster_rows <- cbind(bicluster_rows, vec)
   }
 }
 
 # Give row and column names
-rownames(bicluster_features) <- rownames(corr)
-colnames(bicluster_features) <- paste0("cluster_", 1:ncol(bicluster_features))
+rownames(bicluster_rows) <- rownames(corr)
+colnames(bicluster_rows) <- paste0("cluster_", 1:ncol(bicluster_rows))
 
-head(bicluster_features)
+head(bicluster_rows)
 ```
 
 
 ```{r biclust_10}
 # Get cluster information for samples
-bicluster_samples <- t(bc@NumberxCol)
-bicluster_samples <- data.frame(bicluster_samples)
+bicluster_columns <- t(bc@NumberxCol)
+bicluster_columns <- data.frame(bicluster_columns)
 
 # If no clusters were found, create one. Otherwise create additional cluster which
 # contain those samples that are not included in clusters that were found.
-if( nrow(bicluster_samples) != ncol(corr) ){
-    bicluster_samples <- data.frame(cluster = rep(TRUE, ncol(corr)))
+if( nrow(bicluster_columns) != ncol(corr) ){
+    bicluster_columns <- data.frame(cluster = rep(TRUE, ncol(corr)))
 } else {
   # Create additional cluster that includes those samples that
   # are not included in other clusters.
-  vec <- ifelse(rowSums(bicluster_samples) > 0, FALSE, TRUE)
+  vec <- ifelse(rowSums(bicluster_columns) > 0, FALSE, TRUE)
   # If additional cluster contains samples, then add it
   if ( any(vec) ){
-    bicluster_samples <- cbind(bicluster_samples, vec)
+    bicluster_columns <- cbind(bicluster_columns, vec)
   }
 
 }
 
 # Give row and column names
-rownames(bicluster_samples) <- colnames(corr)
-colnames(bicluster_samples) <- paste0("cluster_", 1:ncol(bicluster_samples))
+rownames(bicluster_columns) <- colnames(corr)
+colnames(bicluster_columns) <- paste0("cluster_", 1:ncol(bicluster_columns))
 
-head(bicluster_samples)
+head(bicluster_columns)
 ```
 
 ```{r biclust_11, fig.width=14, fig.height=12}
 # Convert boolean values into factor
-bicluster_samples <- data.frame(apply(bicluster_samples, 2, as.factor))
-bicluster_features <- data.frame(apply(bicluster_features, 2, as.factor))
+bicluster_columns <- data.frame(apply(bicluster_columns, 2, as.factor))
+bicluster_rows <- data.frame(apply(bicluster_rows, 2, as.factor))
 
 # Adjust colors for all clusters
-if( ncol(bicluster_features) > ncol(bicluster_samples) ){
-  cluster_names <- colnames(bicluster_features)
+if( ncol(bicluster_rows) > ncol(bicluster_columns) ){
+  cluster_names <- colnames(bicluster_rows)
 } else {
-  cluster_names <- colnames(bicluster_samples)
+  cluster_names <- colnames(bicluster_columns)
 }
 annotation_colors <- list()
 for(name in cluster_names){
@@ -359,8 +387,8 @@ for(name in cluster_names){
 }
 
 pheatmap(corr, cluster_cols = F, cluster_rows = F,
-         annotation_col = bicluster_samples, 
-         annotation_row = bicluster_features,
+         annotation_col = bicluster_columns, 
+         annotation_row = bicluster_rows,
          annotation_colors = annotation_colors)
 ```
 
